furu-app/force-app/main/default/objects/Contract/fields/ContractEvents__c.field-meta.xml
<CustomField>
    <fullName>ContractEvents__c</fullName>
    <label>ContractEvents</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>