furu-app/force-app/main/default/objects/Contract/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <label>Mã HĐ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>