furu-app/force-app/main/default/objects/Contract/fields/ContractValue__c.field-meta.xml
<CustomField>
    <fullName>ContractValue__c</fullName>
    <label>Contract Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>