furu-app/force-app/main/default/objects/Contract/fields/December__c.field-meta.xml
<CustomField>
    <fullName>December__c</fullName>
    <label>December</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>