furu-app/force-app/main/default/objects/Contract/fields/ExRateM11__c.field-meta.xml
<CustomField>
    <fullName>ExRateM11__c</fullName>
    <defaultValue>208</defaultValue>
    <label>ExRateM11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>