furu-app/force-app/main/default/objects/Contract/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <label>July</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>