furu-app/force-app/main/default/objects/Contract/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <label>May</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>