furu-app/force-app/main/default/objects/Contract/fields/October__c.field-meta.xml
<CustomField>
    <fullName>October__c</fullName>
    <label>October</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>