furu-app/force-app/main/default/objects/Contract/fields/September__c.field-meta.xml
<CustomField>
    <fullName>September__c</fullName>
    <label>September</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>