furu-app/force-app/main/default/objects/Contract/fields/VND__c.field-meta.xml
<CustomField>
    <fullName>VND__c</fullName>
    <formula>ContractValue__c * 200</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VND</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>